[package]
name = "balrog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
bip39 = {version = "1.0.1", features = ["rand"] }
clap = {version = "3.0.0-beta.4", features = ["derive"] }
dirs = "4.0"
hex = "0.4"
rand = "0.8.4"
rpassword = "5.0.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.68"
sha3 = "0.9.1"
slip10 = {path = "../slip10"}
walkdir = "2"